# backlog-manager

./: LICENSE  Makefile  README.md  backlog.db  backlog_enriched.csv  config.local.toml  config.toml  db.sql  pyproject.toml
backlog_enricher/: __init__.py  cli.py  config.py  db.py  export.py  hltb_client.py  ingest_backloggd.py  invariants.py  logging_setup.py  match.py  normalize.py  review_tui.py  stats.py
backlog_enricher.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_hltb_cache.py  test_ingest_parse.py  test_invariants.py  test_match.py  test_normalize.py
tests/data/: backloggd_page.html  backloggd_page_nuxt.html  hltb_results.html
